MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

=============================================================================

pkpgcounter News :

  * 3.50 :
  
    - Added support for Structured Fax documents in page counting mode.
    
    - Fixed a problem with the parsing of SPL1 (GDI) documents : all such
      documents should now be correctly parsed.
    
    - Improved the PCL3/4/5 parser.
    
  * 3.40 :
  
    - Fixed a major bug in the detection of OpenDocument (ISO/IEC DIS 26300)
      files.
      
    - Added support for page counting in Microsoft Word (c) (tm) (r) (etc...)
      documents.
      
    - Added support for ink accounting in Microsoft Word (c) (tm) (r) (etc...)
      and OpenDocument (ISO/IEC DIS 26300) documents.
      
    - Now automatically detects missing executable dependencies at runtime.  
      
  * 3.30 :
  
    - Added support for all file formats supported by the Python Imaging
      Library.
    
    - Added a minimal parser for Hewlett-Packard LIDIL documents, as 
      produced by the hpijs driver.
      
    - Improved general reliability.
    
    - Improved detection of PCL3/4/5 jobs.
    
    - Major code cleaning.  
      
  * 3.20 :
   
    - Added a minimal parser for Brother HBP documents.
    
    - Added support for Canon ImageRunner commands to the PCLXL parser,
      much like it was already done for the PCL3/4/5 parser.
      
  * 3.10 :
  
    - Added a minimal parser for ESC/PAGES03 style documents.
    
    - Fixed another problem in the code handling the output of Canon's
      ImageRunner printer drivers.
    
  * 3.00 :
  
    - Fixed a problem in the code handling the output of Canon's ImageRunner
      printer drivers.
      
    - Licensing terms changed to GNU GPL v3.0 or higher.  
    
  * 2.18 :
  